// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test: KCalendar > events: panelChange 1`] = `
{
  "date": "2024-04-07",
  "mode": "month",
}
`;

exports[`Test: KCalendar > events: panelChange 2`] = `
{
  "date": "2024-04-07",
  "mode": "year",
}
`;

exports[`Test: KCalendar > events: select 1`] = `
{
  "date": "2024-04-01",
  "source": "year",
}
`;

exports[`Test: KCalendar > events: select 2`] = `
{
  "date": "2021-04-01",
  "source": "year",
}
`;

exports[`Test: KCalendar > events: select 3`] = `
{
  "date": "2021-01-01",
  "source": "month",
}
`;

exports[`Test: KCalendar > props: mode 1`] = `"<div class="k-calendar-date-value">Apr</div> <div class="k-calendar-date-content"></div>"`;

exports[`Test: KCalendar > props: mode 2`] = `"<div class="k-calendar-date-value">25</div> <div class="k-calendar-date-content"></div>"`;

exports[`Test: KCalendar > props: value 1`] = `"<div class="k-calendar-date-value">25</div> <div class="k-calendar-date-content"></div>"`;

exports[`Test: KCalendar > slots: dateCell 1`] = `"<div class="k-calendar-date-value">25</div> <div class="k-calendar-date-content"><div slot="dateCell">25</div></div>"`;

exports[`Test: KCalendar > slots: dateFullCell 1`] = `"<div slot="dateFullCell">25</div>"`;

exports[`Test: KCalendar > slots: header 1`] = `"2024-04-25"`;

exports[`Test: KCalendar > slots: monthCell 1`] = `"<div class="k-calendar-date-value">Apr</div> <div class="k-calendar-date-content"><div slot="monthCell">3</div></div>"`;

exports[`Test: KCalendar > slots: monthFullCell 1`] = `"<div slot="monthFullCell">3</div>"`;
